# remote_car

./: README.md  README.org
data/: 50-ds4drv.rules
devel/: _setup_util.py
devel/include/i2cpwm_board/: DriveMode.h  DriveModeRequest.h  DriveModeResponse.h  IntValue.h  IntValueRequest.h  IntValueResponse.h  Position.h  PositionArray.h  Servo.h  ServoArray.h  ServoConfig.h  ServoConfigArray.h  ServosConfig.h  ServosConfigRequest.h  ServosConfigResponse.h  StopServos.h  StopServosRequest.h  StopServosResponse.h
devel/include/keyboard_controller/: ctrl_cmd.h
devel/include/keyboard_input/: ctrl_cmd.h
devel/lib/pkgconfig/: car_controller.pc  ds4_controller.pc  flobotics_servo_pwm_pi.pc  i2cpwm_board.pc  keyboard_controller.pc  keyboard_input.pc  pca9685_msgs.pc  ps4_ros.pc  ros_pca9685.pc
devel/lib/ps4_ros/: ps4_ros
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/car_controller/cmake/: car_controllerConfig.cmake
devel/share/ds4_controller/cmake/: ds4_controllerConfig.cmake
devel/share/flobotics_servo_pwm_pi/cmake/: flobotics_servo_pwm_piConfig.cmake
devel/share/i2cpwm_board/cmake/: i2cpwm_board-msg-extras.cmake  i2cpwm_board-msg-paths.cmake  i2cpwm_boardConfig.cmake
devel/share/keyboard_controller/cmake/: keyboard_controller-msg-extras.cmake  keyboard_controller-msg-paths.cmake  keyboard_controllerConfig.cmake
devel/share/keyboard_input/cmake/: keyboard_input-msg-extras.cmake  keyboard_input-msg-paths.cmake  (+1 more)
src/car_controller/: CMakeLists.txt  package.xml
src/car_controller/scripts/: control.py
src/ds4_controller/: CMakeLists.txt  package.xml
src/ds4_controller/scripts/: ds4_input.py
src/keyboard_controller/: CMakeLists.txt  package.xml
src/keyboard_controller/scripts/: keyboard_input_gui.py  keyboard_input_pynput.py
src/keyboard_input/: CMakeLists.txt  package.xml
src/keyboard_input/msg/: ctrl_cmd.msg
src/keyboard_input/scripts/: keyboard_input_gui.py
(+45 files in other folders)
